<resources>
    <string name="app_name">MealPlaner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sunday">sunday</string>
    <string name="day_meals">Day Meals</string>
    <string name="login">LOGIN</string>
    <string name="signup">signup</string>
    <string name="forgetpass">Forget Password</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="descript">Description</string>
    <string name="todo1">TODO</string>
    <string name="Catigories">Categories</string>
    <string name="relatedMeals">Related Meals</string>
    <string name="meal_name">Meal Name</string>
    <string name="Category">Category</string>

    <string name="enjoy">Enjoy your favourite meals</string>
    <string name="Meal_instructions">Meal Instructions</string>
    <string name="meal_tag">MealTag</string>
    <string name="Ingridiant">Ingridiant</string>
    <string name="addTogoogleCalendar">Add To Google Calendar </string>
    <string name="meal_country">Country</string>
    <string name="Ingrediant">Ingrediant</string>
    <string name="category">category</string>

    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="guest">Guest</string>
    <string name="oops">OOPS!</string>
    <string name="no_internet">No internet Connection</string>
    <string name="rety">Retry</string>
    <string name="country">country</string>
    <string name="meal">meal</string>
    <string name="search_by">Search With :</string>
    <string name="daily_meals">week plan</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="tharsday">tharsday</string>
    <string name="friday">friday</string>
    <string name="satarday">satarday</string>
    <string name="search_methoda">Search Methods</string>
    <string name="countries">Countries</string>
    <string name="meals">Meals</string>
    <string name="back">Back</string>
    <string name="drop_hint">Add to plan     </string>
    <string name="recommended">Recommended for you</string>
    <string name="add_to_plan">Add To  Plan</string>
    <string name="lotte1">  if you are single and need easy way to cook ??</string>
    <string name="lotte2">If you are a house wife and dont know what kind of food you cook </string>
    <string name="lotte3">welcome you are in right app </string>
    <string name="login_as_gest">Are you sure you want to enter as a guest?
 </string>
    <string name="delete_from_plan">Are you sure you want to delete this meal from your plan?
 </string>

    <string name="delete_from_favourit">Are you sure you want to delete this meal from your favorite list?
 </string>
    <string name="message_for_login">Sorry,You should login first to enjoy this feature
 </string>





    <string name="facebook_app_id">1201578387138291</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="logout">logout</string>
    <string name="delete_meal">Do you want delete meal ??</string>
    <string name="delete">Delete</string>
    <string name="cancel">cancel</string>


</resources>