<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".HomePage.View.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingBottom="60dp"
        android:weightSum="8">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_methoda"
            android:textColor="#A4FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/login_signup_button"
            android:text="@string/Category"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_ingrediant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/login_signup_button"
            android:onClick="btnIngrediant"
            android:text="@string/Ingrediant"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/login_signup_button"
            android:onClick="btnCountry"
            android:padding="10dp"
            android:text="@string/country"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/login_signup_button"
            android:onClick="btnMeals"
            android:text="@string/meal"
            android:textAllCaps="false" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:backgroundTint="@color/theme"
        app:itemBackground="@color/theme"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>